build: separate unit and integration test lifecycles